Assignment-2/test/input/pos/ArrayAccess.java
class ArrayAccess {
    public static void main(String[] a){
        System.out.println(new Fac().ComputeFac(10));
    }
}

class Fac {
    
    public int ComputeFac(int num){
        int[] arr;

        arr = new int[2];
        
        return arr[2];
    }
}